# SUNDAYMaker

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: mingw-toolchain.cmake  msvc-toolchain.cmake
include/: AppCommandRegistry.h  AppLayoutInternal.h  AppModuleInternal.h  AppUiContextInternal.h  ChangeSet.h  DocAppBridgeInternal.h  DocContextInternal.h  DocViewBridgeInternal.h  EditorController.h  InsertUi.h  MenuMnemonic.h  PageListInternal.h  Palette.h  SettingsIniStore.h  Sunday.h  TextEncoding.h  UiText.h  ViewCentralInternal.h  pch.h  resource.h
include/Sqlite3/: sqlite3.exp  sqlite3.lib
resource/: Sunday.manifest  Sunday.rc
resource/rc/: DocSearchCtrl.rc  FrameCtrl.rc  Icon.rc  InsertColor.rc  LayerBox.rc  PageCtrl.rc  Setting.rc  SundayMain.rc  ViewTrace.rc
src/app/: AccelCtrl.cpp  AppBootstrap.cpp  AppCommandRegistry.cpp  AppDialogs.cpp  AppFileTab.cpp  AppFonts.cpp  AppLayout.cpp  AppMainWindow.cpp  AppMainWindowInput.cpp  AppMainWindowLifecycle.cpp  AppModelessDialogs.cpp  AppPagePreload.cpp  AppTrayIcon.cpp  CommonUtil.cpp  ContextCtrl.cpp  ImageExport.cpp  MenuMnemonic.cpp  MenuPicker.cpp  PageCtrl.cpp  PageSneakPeek.cpp  SettingsIniStore.cpp  SettingsJson.cpp  SettingsMigration.cpp  Sunday.cpp  TextEncoding.cpp  ToolBar.cpp  UiText.cpp
src/doc/: DocAdjustant.cpp  DocCalculationCommon.cpp  DocCalculator.cpp  DocCore.cpp  DocFileCtrl.cpp  DocFlipCtrl.cpp  DocInsDelCtrl.cpp  DocOperateLog.cpp  DocPreview.cpp  DocSearchCtrl.cpp  DocSelect.cpp
src/palette/: InsertColor.cpp  InsertFrame.cpp  InsertLayer.cpp  InsertUi.cpp  PaletteBucket.cpp  PaletteCommon.cpp  PaletteEditor.cpp  PaletteListUi.cpp  UserItem.cpp
src/view/: EditorController.cpp  ViewCaret.cpp  ViewCentral.cpp  ViewCentralColour.cpp  ViewCentralCommand.cpp  ViewCentralRedraw.cpp  ViewKeyButton.cpp  ViewSelect.cpp  ViewTrace.cpp
